--- a/src/styles/school/school.module.scss
+++ b/src/styles/school/school.module.scss
@@ -59,7 +59,7 @@
 }
 .schoolPageGames {
     position: relative;
-    z-index: 5;
+    z-index: 50;
 }
 
 @media only screen and (min-width: 991px) and (max-width: 1300px) {
